tests/NormalTests/paczka1/fuzzy1/41608798.err
Error in line 6: nVH7E2CX S96 15,5
Error in line 9: nVH7E2CX A829 95,6
Error in line 2: 2cUw7GV0 S96 24,1
Error in line 11: dsIHa A829 59,3
Error in line 12: nVH7E2CX A623 88,6
Error in line 23: 2cUw7GV0 A171 19,7
Error in line 28: XyGInx A829 46,4
Error in line 29: J9JNMC S96 18,2
